[package]
name = "anchor-derive-error"
version = "0.3.0"
authors = ["aankor <lambdasound@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "=1.0.57", features = ["full"] }
anchor-syn = { path = "../../syn", version = "0.3.0" }
